--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 feedparser==6.0.10
-chromadb==0.4.22
-sentence-transformers==2.2.2
+chromadb>=1.3.5
+sentence-transformers>=5.1.2
 pyyaml==6.0.1
 requests==2.31.0
 tqdm==4.66.1
-ollama==0.1.7
+ollama>=0.6.1
 
