--- a/.github/workflows/crawl.yml
+++ b/.github/workflows/crawl.yml
@@ -27,9 +27,9 @@ jobs:
           pip install --upgrade pip
           pip install feedparser pyyaml requests
 
-      - name: Crawl Upwork RSS
+      - name: Crawl Jobs from Multiple Sources
         run: |
-          python .github/workflows/crawl_rss.py
+          python scripts/crawl_multi_source.py
 
       - name: Commit and push if changes
         env:
