--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,6 @@
 # Job Sources Configuration - Hỗ trợ nhiều nguồn uy tín
 sources:
-  # RSS Feeds từ các job boards uy tín (đã test và hoạt động)
+  # RSS Feeds từ các job boards uy tín (chỉ giữ nguồn nhanh, đã test)
   rss_feeds:
     - name: "We Work Remotely - Programming"
       url: "https://weworkremotely.com/categories/remote-programming-jobs.rss"
@@ -10,37 +10,37 @@ sources:
       url: "https://weworkremotely.com/categories/remote-design-jobs.rss"
       enabled: true
       type: "rss"
-    - name: "Remote.co - All Jobs"
-      url: "https://remote.co/remote-jobs/feed/"
-      enabled: true
-      type: "rss"
     - name: "Working Nomads - Development"
       url: "https://www.workingnomads.com/jobsrss?category=development"
       enabled: true
       type: "rss"
+    - name: "Remote.co - All Jobs"
+      url: "https://remote.co/remote-jobs/feed/"
+      enabled: false  # Tắt tạm vì chậm
+      type: "rss"
     - name: "Working Nomads - Design"
       url: "https://www.workingnomads.com/jobsrss?category=design"
-      enabled: true
+      enabled: false  # Tắt tạm
       type: "rss"
     - name: "FlexJobs RSS"
       url: "https://www.flexjobs.com/rss/jobs.xml"
-      enabled: true
+      enabled: false  # Tắt tạm
       type: "rss"
     - name: "Remote Work Hub"
       url: "https://remoteworkhub.com/feed/"
-      enabled: true
+      enabled: false  # Tắt tạm
       type: "rss"
     - name: "Jobspresso - Remote Jobs"
       url: "https://jobspresso.co/feed/"
-      enabled: true
+      enabled: false  # Tắt tạm
       type: "rss"
     - name: "RemoteOK - Dev Jobs"
       url: "https://remoteok.io/remote-dev-jobs.rss"
-      enabled: true
+      enabled: false  # Tắt tạm
       type: "rss"
     - name: "JustRemote - All Jobs"
       url: "https://justremote.co/remote-jobs/feed"
-      enabled: true
+      enabled: false  # Tắt tạm
       type: "rss"
   
   # Job Boards với API công khai
