Fix GitHub Actions: better timeout handling, remove unused import

--- a/.github/workflows/crawl.yml
+++ b/.github/workflows/crawl.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install feedparser pyyaml requests
-          # ThreadPoolExecutor is built-in, no need to install
+          # concurrent.futures is built-in Python 3.2+, no need to install
 
       - name: Crawl Jobs from Multiple Sources
         timeout-minutes: 2
