--- a/.github/workflows/crawl.yml
+++ b/.github/workflows/crawl.yml
@@ -12,9 +12,9 @@ jobs:
     
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
-          token: ${{ secrets.PAT_TOKEN || secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT_TOKEN }}
           fetch-depth: 0
 
       - name: Set up Python
@@ -35,19 +35,18 @@ jobs:
 
       - name: Commit and push if changes
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN || secrets.GITHUB_TOKEN }}
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           
-          # Use PAT_TOKEN if available, otherwise use GITHUB_TOKEN
-          if [ -n "${{ secrets.PAT_TOKEN }}" ]; then
-            TOKEN="${{ secrets.PAT_TOKEN }}"
-          else
-            TOKEN="${{ secrets.GITHUB_TOKEN }}"
+          if [ -z "$PAT_TOKEN" ]; then
+            echo "⚠️ PAT_TOKEN not found in secrets. Skipping push."
+            echo "Please add PAT_TOKEN to repository secrets."
+            exit 0
           fi
           
-          git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}.git
+          git remote set-url origin https://x-access-token:${PAT_TOKEN}@github.com/${{ github.repository }}.git
           git add data/raw_jobs.jsonl
           
           if ! git diff --staged --quiet; then
