--- a/.github/workflows/crawl.yml
+++ b/.github/workflows/crawl.yml
@@ -16,7 +16,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.PAT_TOKEN || secrets.GITHUB_TOKEN }}
           fetch-depth: 0
 
       - name: Set up Python
@@ -36,23 +35,14 @@ jobs:
           python scripts/crawl_multi_source.py
 
       - name: Commit and push if changes
-        env:
-          TOKEN: ${{ secrets.PAT_TOKEN || secrets.GITHUB_TOKEN }}
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          
-          if [ -z "$TOKEN" ]; then
-            echo "⚠️ No token available. Skipping push."
-            exit 0
-          fi
-          
-          git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}.git
           git add data/raw_jobs.jsonl
           
           if ! git diff --staged --quiet; then
             git commit -m "Auto-update: New jobs from RSS [skip ci]"
-            git push origin main || echo "⚠️ Push failed, but continuing..."
+            git push
           else
             echo "No changes to commit"
           fi
