Refactor: Chuyển sang Feed Aggregator - 100% an toàn, không đụng Upwork
- Xóa module upwork_sniper (Playwright crawler)
- Mở rộng config với 20+ RSS feeds an toàn (job boards, tech blogs)
- Tạo module AI: analyser.py, summarizer.py, generator.py
- Cập nhật crawl_multi_source.py hỗ trợ trends feeds
- Cập nhật GitHub Actions workflow
- Thêm script analyze_and_summarize.py
- Tạo README.md mới với hướng dẫn đầy đủ

--- a/.github/workflows/crawl.yml
+++ b/.github/workflows/crawl.yml
@@ -1,4 +1,4 @@
-name: Crawl Upwork RSS Jobs
+name: Feed Aggregator - Safe Job & Trend Crawler
 
 on:
   schedule:
@@ -26,11 +26,11 @@ jobs:
       - name: Install dependencies
         run: |
           pip install --upgrade pip
-          pip install feedparser pyyaml requests
+          pip install feedparser pyyaml requests beautifulsoup4
           # concurrent.futures is built-in Python 3.2+, no need to install
 
-      - name: Crawl Jobs from Multiple Sources
-        timeout-minutes: 2
+      - name: Crawl Jobs & Trends from Multiple Sources
+        timeout-minutes: 3
         run: |
           python scripts/crawl_multi_source.py
 
@@ -38,10 +38,10 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add data/raw_jobs.jsonl
+          git add data/raw_jobs.jsonl data/feeds/ data/trends/
           
           if ! git diff --staged --quiet; then
-            git commit -m "Auto-update: New jobs from RSS [skip ci]"
+            git commit -m "Auto-update: New jobs and trends from feeds [skip ci]"
             git push
           else
             echo "No changes to commit"
