--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,68 +1,154 @@
-# Job Sources Configuration - Hỗ trợ nhiều nguồn uy tín
+# Feed Aggregator Configuration - 100% Safe, No Upwork
+# Tất cả nguồn đều hợp pháp, public, không vi phạm ToS
+
 sources:
-  # RSS Feeds từ các job boards uy tín (chỉ giữ nguồn nhanh, đã test)
-  rss_feeds:
+  # ============================================
+  # JOB BOARDS RSS - Remote Jobs
+  # ============================================
+  job_boards:
     - name: "We Work Remotely - Programming"
       url: "https://weworkremotely.com/categories/remote-programming-jobs.rss"
       enabled: true
-      type: "rss"
+      category: "jobs"
     - name: "We Work Remotely - Design"
       url: "https://weworkremotely.com/categories/remote-design-jobs.rss"
       enabled: true
-      type: "rss"
+      category: "jobs"
     - name: "Working Nomads - Development"
       url: "https://www.workingnomads.com/jobsrss?category=development"
       enabled: true
-      type: "rss"
-    - name: "Remote.co - All Jobs"
-      url: "https://remote.co/remote-jobs/feed/"
-      enabled: false  # Tắt tạm vì chậm
-      type: "rss"
+      category: "jobs"
     - name: "Working Nomads - Design"
       url: "https://www.workingnomads.com/jobsrss?category=design"
-      enabled: false  # Tắt tạm
-      type: "rss"
-    - name: "FlexJobs RSS"
-      url: "https://www.flexjobs.com/rss/jobs.xml"
-      enabled: false  # Tắt tạm
-      type: "rss"
-    - name: "Remote Work Hub"
-      url: "https://remoteworkhub.com/feed/"
-      enabled: false  # Tắt tạm
-      type: "rss"
-    - name: "Jobspresso - Remote Jobs"
-      url: "https://jobspresso.co/feed/"
-      enabled: false  # Tắt tạm
-      type: "rss"
+      enabled: true
+      category: "jobs"
+    - name: "Remote.co - All Jobs"
+      url: "https://remote.co/remote-jobs/feed/"
+      enabled: true
+      category: "jobs"
     - name: "RemoteOK - Dev Jobs"
       url: "https://remoteok.io/remote-dev-jobs.rss"
-      enabled: false  # Tắt tạm
-      type: "rss"
+      enabled: true
+      category: "jobs"
     - name: "JustRemote - All Jobs"
       url: "https://justremote.co/remote-jobs/feed"
-      enabled: false  # Tắt tạm
-      type: "rss"
-  
-  # Job Boards với API công khai
+      enabled: true
+      category: "jobs"
+    - name: "Jobspresso - Remote Jobs"
+      url: "https://jobspresso.co/feed/"
+      enabled: true
+      category: "jobs"
+    - name: "Remote Work Hub"
+      url: "https://remoteworkhub.com/feed/"
+      enabled: true
+      category: "jobs"
+    - name: "FlexJobs RSS"
+      url: "https://www.flexjobs.com/rss/jobs.xml"
+      enabled: true
+      category: "jobs"
+    - name: "StackOverflow Jobs"
+      url: "https://stackoverflow.com/jobs/feed"
+      enabled: true
+      category: "jobs"
+    - name: "Indeed RSS (Python)"
+      url: "https://www.indeed.com/rss?q=python+remote&l="
+      enabled: true
+      category: "jobs"
+    - name: "Indeed RSS (JavaScript)"
+      url: "https://www.indeed.com/rss?q=javascript+remote&l="
+      enabled: true
+      category: "jobs"
+    - name: "Indeed RSS (Web Development)"
+      url: "https://www.indeed.com/rss?q=web+development+remote&l="
+      enabled: true
+      category: "jobs"
+
+  # ============================================
+  # TECH BLOGS & NEWS RSS - Để AI học trend
+  # ============================================
+  tech_blogs:
+    - name: "OpenAI Blog"
+      url: "https://openai.com/blog/rss.xml"
+      enabled: true
+      category: "trends"
+    - name: "GitHub Changelog"
+      url: "https://github.blog/changelog/feed"
+      enabled: true
+      category: "trends"
+    - name: "Dev.to - Latest"
+      url: "https://dev.to/feed"
+      enabled: true
+      category: "trends"
+    - name: "Dev.to - Python"
+      url: "https://dev.to/feed/tag/python"
+      enabled: true
+      category: "trends"
+    - name: "Dev.to - JavaScript"
+      url: "https://dev.to/feed/tag/javascript"
+      enabled: true
+      category: "trends"
+    - name: "HackerNoon - Technology"
+      url: "https://hackernoon.com/feed"
+      enabled: true
+      category: "trends"
+    - name: "Medium - Programming"
+      url: "https://medium.com/feed/tag/programming"
+      enabled: true
+      category: "trends"
+    - name: "Medium - AI"
+      url: "https://medium.com/feed/tag/artificial-intelligence"
+      enabled: true
+      category: "trends"
+    - name: "FreeCodeCamp News"
+      url: "https://www.freecodecamp.org/news/rss/"
+      enabled: true
+      category: "trends"
+    - name: "Smashing Magazine"
+      url: "https://www.smashingmagazine.com/feed/"
+      enabled: true
+      category: "trends"
+
+  # ============================================
+  # GOOGLE ALERTS RSS
+  # ============================================
+  # Hướng dẫn: Vào https://www.google.com/alerts
+  # Tạo alert với từ khóa, chọn "Deliver to: RSS feed"
+  # Copy RSS URL vào đây
+  google_alerts:
+    - name: "AI Freelance Remote"
+      url: ""  # Paste RSS URL từ Google Alerts vào đây
+      enabled: false
+      category: "jobs"
+    - name: "Python Contract Remote"
+      url: ""  # Paste RSS URL từ Google Alerts vào đây
+      enabled: false
+      category: "jobs"
+    - name: "Automation Job Remote"
+      url: ""  # Paste RSS URL từ Google Alerts vào đây
+      enabled: false
+      category: "jobs"
+
+  # ============================================
+  # HACKERNEWS "WHO IS HIRING" (Parse HTML)
+  # ============================================
+  hackernews:
+    - name: "HN Who is Hiring"
+      url: "https://news.ycombinator.com/submitted?id=whoishiring"
+      enabled: true
+      category: "jobs"
+      parser: "html"  # Cần parse HTML thay vì RSS
+
+  # ============================================
+  # API SOURCES (Public APIs)
+  # ============================================
   api_sources:
     - name: "RemoteOK API"
       url: "https://remoteok.io/api"
       enabled: true
-      type: "api"
+      category: "jobs"
       params: {}
-  
-  # Web scraping sources (cần cẩn thận với ToS)
-  web_sources:
-    - name: "Freelancer.com"
-      url: "https://www.freelancer.com/jobs/"
-      enabled: false
-      type: "web"
-    - name: "Guru.com"
-      url: "https://www.guru.com/d/jobs/"
-      enabled: false
-      type: "web"
 
-# Keywords để search jobs (dùng cho các nguồn)
+# Keywords để filter và phân loại jobs
 search_keywords:
   - "WordPress"
   - "Laravel"
@@ -74,6 +160,10 @@ search_keywords:
   - "JavaScript"
   - "Python"
   - "API Development"
+  - "Automation"
+  - "Data Processing"
+  - "E-commerce"
+  - "Full Stack"
 
 # Ollama Configuration
 ollama:
@@ -83,9 +173,35 @@ ollama:
 
 # ChromaDB Configuration
 chromadb:
-  collection_name: "upwork_jobs"
+  collection_name: "job_feeds"  # Đổi tên từ upwork_jobs
   persist_directory: "data/chroma_db"
+
+# AI Analysis Settings
+ai:
+  # Phân tích job
+  analyser:
+    enable_scoring: true
+    enable_category_detection: true
+    enable_trend_extraction: true
+  
+  # Tóm tắt trend hàng ngày
+  summarizer:
+    daily_summary: true
+    weekly_summary: true
+    top_keywords: 10
+  
+  # Generate proposal draft
+  generator:
+    use_template: true
+    max_length: 200
 
 # Query Settings
 query:
   top_k: 10  # Số lượng jobs trả về khi query
+
+# Crawl Settings
+crawl:
+  timeout_per_source: 10  # seconds
+  max_workers: 5  # parallel threads
+  retry_attempts: 2
+  interval_minutes: 15  # GitHub Actions chạy mỗi 15 phút
