--- a/config/config.yaml
+++ b/config/config.yaml
@@ -16,11 +16,11 @@ sources:
       category: "jobs"
     - name: "Working Nomads - Development"
       url: "https://www.workingnomads.com/jobsrss?category=development"
-      enabled: true
+      enabled: false  # Tắt tạm vì 404
       category: "jobs"
     - name: "Working Nomads - Design"
       url: "https://www.workingnomads.com/jobsrss?category=design"
-      enabled: true
+      enabled: false  # Tắt tạm vì 404
       category: "jobs"
     - name: "Remote.co - All Jobs"
       url: "https://remote.co/remote-jobs/feed/"
@@ -48,19 +48,19 @@ sources:
       category: "jobs"
     - name: "StackOverflow Jobs"
       url: "https://stackoverflow.com/jobs/feed"
-      enabled: true
+      enabled: false  # Tắt tạm vì 404
       category: "jobs"
     - name: "Indeed RSS (Python)"
       url: "https://www.indeed.com/rss?q=python+remote&l="
-      enabled: true
+      enabled: false  # Tắt tạm vì 403 (cần authentication)
       category: "jobs"
     - name: "Indeed RSS (JavaScript)"
       url: "https://www.indeed.com/rss?q=javascript+remote&l="
-      enabled: true
+      enabled: false  # Tắt tạm vì 403 (cần authentication)
       category: "jobs"
     - name: "Indeed RSS (Web Development)"
       url: "https://www.indeed.com/rss?q=web+development+remote&l="
-      enabled: true
+      enabled: false  # Tắt tạm vì 403 (cần authentication)
       category: "jobs"
 
   # ============================================
