--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 feedparser==6.0.10
-chromadb>=1.3.5
+chromadb==0.5.3  # Pin version để tránh conflict với embedding
 sentence-transformers>=5.1.2
 pyyaml==6.0.1
 requests==2.31.0
