--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 feedparser==6.0.10
-chromadb==0.5.3  # Pin version để tránh conflict với embedding
+chromadb>=1.3.5  # Version 1.x để match với API code đang dùng
 sentence-transformers>=5.1.2
 pyyaml==6.0.1
 requests==2.31.0
